WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260257
[IFC] TextOnlyLineBuilder should handle content with 'white-space: break-spaces'
https://bugs.webkit.org/show_bug.cgi?id=260257
Summary
[IFC] TextOnlyLineBuilder should handle content with 'white-space: break-spaces'
alan
Reported
2023-08-16 07:15:20 PDT
ssia
Attachments
[fast-cq]Patch
(7.95 KB, patch)
2023-08-16 07:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-08-16 07:29:12 PDT
Created
attachment 467290
[details]
[fast-cq]Patch
Antti Koivisto
Comment 2
2023-08-16 12:01:16 PDT
Comment on
attachment 467290
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=467290&action=review
> Source/WebCore/layout/formattingContexts/inline/TextOnlyLineBuilder.cpp:148 > + size_t placedInlineItemCount = 0;
C++23 will have uz literal for this!
alan
Comment 3
2023-08-16 12:45:47 PDT
(In reply to Antti Koivisto from
comment #2
)
> Comment on
attachment 467290
[details]
> [fast-cq]Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=467290&action=review
> > > Source/WebCore/layout/formattingContexts/inline/TextOnlyLineBuilder.cpp:148 > > + size_t placedInlineItemCount = 0; > > C++23 will have uz literal for this!
autos will finally be nicely lined up.
EWS
Comment 4
2023-08-16 12:49:36 PDT
Committed
266955@main
(3467db480187): <
https://commits.webkit.org/266955@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467290
[details]
.
Radar WebKit Bug Importer
Comment 5
2023-08-16 12:50:35 PDT
<
rdar://problem/113983232
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug