[IFC] TextOnlyLineBuilder should handle content with 'white-space: break-spaces' https://bugs.webkit.org/show_bug.cgi?id=260257

Reviewed by Antti Koivisto.

'white-space: break-spaces' allows soft wrap opportunities only after whitespace (as opposed to before and after.
TextOnlyLineBuilder currently assumes each inline item ends in a soft wrap opportunity. This patch teaches TextOnlyLineBuilder::placeInlineTextContent
to concatenate multiple inline items as a continuous content, input to line breaking.

* Source/WebCore/layout/formattingContexts/inline/TextOnlyLineBuilder.cpp:
(WebCore::Layout::TextOnlyLineBuilder::placeInlineTextContent):
(WebCore::Layout::TextOnlyLineBuilder::handleInlineTextContent):
(WebCore::Layout::TextOnlyLineBuilder::isEligibleForSimplifiedTextOnlyInlineLayout):

Canonical link: https://commits.webkit.org/266955@main